--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "@types/react-native": "^0.72.7",
     "typescript": "^5.1.3"
   },
+  "overrides": {
+    "@types/react": "~18.2.14"
+  },
   "private": true
 }
