add under @types cssprop setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "types": ["styled-components/native"]
   },
   "extends": "expo/tsconfig.base"
 }
